--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="nav navbar-nav pull-sm-left">
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Home</a>
+                                <a class="nav-link" href="#">Home1</a>
                             </li>
                             <li class="nav-item">
                                     <a class="nav-link" href="#">Recipes</a>
