--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/style.css">
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/login.css">
-    <script src="JS/style.js"></script>
+    <script src="JS/login.js"></script>
     <link rel="shortcut icon" href="Imagini/iconita.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -88,7 +88,7 @@
                                         <a> <input class="btn"style="color:white"type="button"name=""value="Sign in" onclick="login()"></a>
                                     </div>
                                     <div class="textbox-btn">
-                                        <a   href="register.html"><input class="btn"style="color:white"type="button"name=""value="Register"></a>
+                                        <a   href="register.html"><input class="btn"style="color:white"type="button"name=""value="Register" onclick="register()"></a>
                                        </div>
                                 </form>
                             </div>
