--- a/register.html
+++ b/register.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/style.css">
     <link rel="stylesheet" type="text/css" media="screen" href="CSS/register.css">
-    <script src="JS/style.js"></script>
+    <script src="JS/register.js"></script>
     <link rel="shortcut icon" href="Imagini/iconita.png" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -163,7 +163,7 @@
                            
                               </div>
                               <div class="col-sm-12">
-                                <div class="btn btn-warning">Submit</div>
+                                <div class="btn btn-warning" onclick="register()">Submit</div>
                           </div>
                         </div>
                     </div>	 
